# impedance_lab

./: .gitmodules  LICENSE.txt  README.md  components.json  eslint.config.ts  index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: github_pages.yml  linter.yml
assets/: BenchmarkView-BZ--lJcP.js  BenchmarkView-Bw8Wmgh3.js  BenchmarkView-CcTAPaZP.js  BenchmarkView-JhwOCDMw.js  StackupCalculator-BAfvXJeW.js  StackupCalculator-BUk8OYuq.js  StackupCalculator-CowrsV4V.js  StackupCalculator-CqQ3GAhv.js  StackupCalculator-DC5u2KlP.css  StackupCalculator-DDEYmav0.css  StackupCalculator-Dl4PY-K9.js  StackupCalculator-G-rtSdD1.css  StackupCalculator-a-4pxSAj.js  StackupCalculator-ds1vqChI.css  StackupCalculator-glJvxLKl.js  TemplatesView-Ba5BD4OT.js  TemplatesView-C7HUCVVt.js  TemplatesView-Cr7ZAb6J.js  TemplatesView-Cxu3r7zI.js  TemplatesView-DA9qPoL7.js  TemplatesView-DcvZ0K11.js  TemplatesView-SjUXlYSM.js  editor_templates--5dIu3NY.js  editor_templates-BEuelnOT.css  editor_templates-Bn2-iMlX.js  editor_templates-CQLbPOQt.js  editor_templates-CeBlQz-D.js  editor_templates-DRMK0Xyj.js  editor_templates-D_QC5XXE.js  editor_templates-DzUc8Hgn.js  editor_templates-pkdCprFo.css  form_validation-BCTDk1Rz.js  form_validation-DzRlF4F8.js  fuzzysort-EuvyY0K8.js  index-B5Ufe1Ol.css  index-BMAnv-Tn.js  index-BQR7a2wG.css  index-Be0eAOTF.css  index-Bixva_Gt.js  index-CWcrCmoJ.js  (+14 more)
public/: manifest.json
src/: App.vue  AppSidebar.vue  global.ts  main.css  main.ts  routes.ts
src/@/: README.md
src/app/: app.ts  app_2d.ts  app_3d.ts  cstyle_struct.ts  kernels.ts  mesher.ts  ndarray.ts  transmission_line_2d.ts  util.ts
src/app/electrostatic_2d/: GridViewer.vue  grid.ts  grid_builder.ts  grid_viewer_renderer.ts  impedance.ts
src/app/mesher/: GridRegionTable.vue  lines_builder.ts  mesher.ts
src/components/: GpuProvider.vue  LineChart.vue  ProfilerFlameChart.vue  WasmProvider.vue
src/components/viewer_2d/: Viewer2D.vue  index.ts  kernels.ts  renderer.ts  shader_component.wgsl  shader_index_beta.wgsl  shader_quiver.wgsl
src/components/viewer_3d/: Viewer3D.vue  index.ts  kernels.ts  renderer.ts  shader_copy_slice.wgsl  shader_render_field.wgsl
src/engine/: electrostatic_2d.ts  fdtd_3d.ts  grid_2d.ts  lines_builder.ts  mesher.ts  regions.ts  transmission_line_2d.ts
src/engine/fdtd_3d/: grid.ts  kernels.ts  shader_current_source.wgsl
src/providers/: GpuProvider.vue  WasmProvider.vue  providers.ts
src/providers/toast/: ToastProvider.vue  toast.ts
src/providers/user_data/: UserDataProvider.vue  user_data.ts
src/utility/: DarkModeToggle.vue  ProfilerFlameChart.vue  TabsView.vue  convert_f32_to_f16.ts  cstyle_struct.ts  debounce.ts  form_validation.ts  module_ndarray.ts  ndarray.ts  profiler.ts  search.ts  standard_suffix.ts  unit_types.ts
src/views/: AboutView.vue  GridView.vue  HomeView.vue  TestView.vue  router.ts
src/views/app_2d/: App2DView.vue  app_2d.ts  index.ts
src/views/app_3d/: App3DView.vue  Viewer3D.vue  app_3d.ts  grid.ts  index.ts  renderer.ts
src/views/benchmark/: BenchmarkView.vue  GPUFeaturesList.vue  GPUSupportLimitsTable.vue
src/views/editor_2d/: CrossSection.vue  RegionGridViewer.vue  StackupParameterForm.vue  StackupViewer.vue  TransmissionLineEditor2d.vue  editor.ts  editor_to_viewer_layout.ts  index.ts  layer_templates.ts  layout.ts  stackup.ts  stackup_grid.ts  stackup_parameters.ts  stackup_to_viewer_layout.ts  viewer_layout.ts
src/views/gpu_benchmark/: BenchmarkView.vue  ComputeBenchmarkView.vue  FeaturesList.vue  FlopBenchmarkView.vue  LimitsTable.vue  MemoryBandwidthBenchmarkView.vue  config.ts  gpu_timer.ts
src/views/stackup_2d/: EditorControls.vue  ExportView.vue  GridRegionTable.vue  GridViewer.vue  ImpedanceResultTable.vue  MeasurementTable.vue  MeshConfigForm.vue  MeshViewer.vue  ParameterForm.vue  (+23 more)
src/wasm/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  index.ts
src/wasm/src/: LU_Solver.cpp  LU_Solver.hpp  PinnedArray.hpp  ZipFile.cpp  ZipFile.hpp  convert_f32_to_f16.cpp  convert_f32_to_f16.hpp  electrostatic_2d.rs  energy_integral.cpp  energy_integral.hpp  fdtd_3d.rs  lib.cpp  lib.rs  logging.hpp  utility.rs
(+24 files in other folders)
